--- a/movers_back/nixpacks.toml
+++ b/movers_back/nixpacks.toml
@@ -1,12 +1,17 @@
+[phases.setup]
+nixPkgs = ["php81", "php81Packages.composer"]
+
+[phases.install]
+cmds = ["composer install --no-dev --optimize-autoloader"]
+
 [phases.build]
 cmds = [
-    "composer install --no-dev --optimize-autoloader",
     "php artisan config:cache",
-    "php artisan route:cache",
+    "php artisan route:cache", 
     "php artisan view:cache"
 ]
 
-[phases.start]
+[start]
 cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
 
 [variables]
