--- a/movers_back/composer.json
+++ b/movers_back/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.2",
+        "php": "php": "^8.1",
         "cviebrock/eloquent-sluggable": "^10.0",
         "firebase/php-jwt": "^6.3",
         "guzzlehttp/guzzle": "^7.0.1",
