--- a/movers_back/nixpacks.toml
+++ b/movers_back/nixpacks.toml
@@ -2,7 +2,11 @@
 nixPkgs = ["php81", "php81Packages.composer"]
 
 [phases.install]
-cmds = ["composer install --no-dev --optimize-autoloader"]
+cmds = [
+    "composer install --no-dev --optimize-autoloader",
+    "cp .env.example .env",
+    "php artisan key:generate --no-interaction"
+]
 
 [phases.build]
 cmds = [
