--- a/movers_back/nixpacks.toml
+++ b/movers_back/nixpacks.toml
@@ -2,18 +2,7 @@
 nixPkgs = ["php81", "php81Packages.composer"]
 
 [phases.install]
-cmds = [
-    "composer install --no-dev --optimize-autoloader",
-    "cp .env.example .env",
-    "php artisan key:generate --no-interaction"
-]
-
-[phases.build]
-cmds = [
-    "php artisan config:cache",
-    "php artisan route:cache", 
-    "php artisan view:cache"
-]
+cmds = ["composer install --no-dev --optimize-autoloader"]
 
 [start]
 cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
