--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-          extensions: mbstring, xml, ctype, iconv, intl, pdo, pdo_mysql, dom, filter, gd, json, zip
+          extensions: mbstring, xml, ctype, iconv, intl, pdo, pdo_mysql, dom, filter, gd, json, zip, fileinfo, openssl, tokenizer
 
       - name: Cache Composer dependencies
         uses: actions/cache@v3
@@ -34,6 +34,9 @@ jobs:
 
       - name: Generate app key
         run: php artisan key:generate
+
+      - name: Set correct permissions
+        run: chmod -R 775 storage bootstrap/cache
 
       - name: Cache config
         run: php artisan config:cache
