--- a/movers_back/.github/workflows/deploy.yml
+++ b/movers_back/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: movers_back
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,32 +33,24 @@ jobs:
       - name: Install Composer dependencies
         run: |
           composer install --no-dev --optimize-autoloader --no-interaction --prefer-dist || cat composer.lock
-        working-directory: movers_back
 
       - name: Check vendor folder
         run: ls -la
-        working-directory: movers_back
 
       - name: Copy .env file
         run: cp .env.example .env
-        working-directory: movers_back
 
       - name: Generate app key
         run: php artisan key:generate
-        working-directory: movers_back
 
       - name: Set correct permissions
         run: chmod -R 775 storage bootstrap/cache
-        working-directory: movers_back
 
       - name: Cache config
         run: php artisan config:cache
-        working-directory: movers_back
 
       - name: Cache routes
         run: php artisan route:cache
-        working-directory: movers_back
 
       - name: Cache views
         run: php artisan view:cache
-        working-directory: movers_back
