--- a/movers_back/nixpacks.toml
+++ b/movers_back/nixpacks.toml
@@ -3,11 +3,13 @@ nixPkgs = ["php81", "php81Packages.composer"]
 
 [phases.install]
 cmds = [
-    "composer install --no-dev --optimize-autoloader"
+    "composer install --no-dev --optimize-autoloader --no-interaction"
 ]
 
 [phases.build]
 cmds = [
+    "cp .env.example .env",
+    "php artisan key:generate --force",
     "php artisan config:cache",
     "php artisan route:cache",
     "php artisan view:cache"
