--- a/movers_back/composer.json
+++ b/movers_back/composer.json
@@ -1,77 +1,76 @@
-{
-    "name": "laravel/laravel",
-    "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
-    "license": "MIT",
-    "require": {
-        "php": "^8.1",
-        "cviebrock/eloquent-sluggable": "^10.0",
-        "firebase/php-jwt": "^6.3",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/http": "*",
-        "laravel/cashier": "^14.12",
-        "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "*",
-        "pusher/pusher-php-server": "^7.2",
-        "spatie/laravel-medialibrary": "^10.11",
-        "spatie/laravel-permission": "^5.5",
-        "yoeunes/toastr": "^2.3"
-    },
-    "require-dev": {
-        "spatie/laravel-ignition": "^2.0",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/envoy": "^2.8",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        },
-        "files": [
-            "app/Helpers/CustomHelper.php"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "minimum-stability": "stable",
-    "prefer-stable": true
-}
+name: Deploy Laravel App
+
+on:
+  push:
+    branches: [main]
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: movers_back
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          extensions: mbstring, xml, ctype, iconv, intl, pdo, pdo_mysql, dom, filter, gd, json, zip, fileinfo, openssl, tokenizer
+
+      - name: Cache Composer dependencies
+        uses: actions/cache@v3
+        with:
+          path: movers_back/vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('movers_back/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
+
+      - name: Install Composer dependencies
+        run: composer install --no-dev --optimize-autoloader --no-interaction --prefer-dist
+
+      - name: Verify vendor folder exists
+        run: |
+          echo "Checking if vendor/autoload.php exists..."
+          ls -la vendor/autoload.php
+          echo "Current directory:"
+          pwd
+          echo "Directory contents:"
+          ls -la
+
+      - name: Copy .env file
+        run: cp .env.example .env
+
+      - name: Generate app key
+        run: php artisan key:generate
+
+      - name: Set correct permissions
+        run: |
+          chmod -R 775 storage bootstrap/cache
+          chmod -R 755 vendor
+
+      - name: Test PHP and Artisan
+        run: |
+          php -v
+          php artisan --version
+
+      - name: Cache config
+        run: php artisan config:cache
+
+      - name: Cache routes
+        run: php artisan route:cache
+
+      - name: Cache views
+        run: php artisan view:cache
+
+      - name: Prepare deployment artifact
+        run: |
+          echo "Creating deployment package..."
+          tar -czf ../laravel-app.tar.gz .
+          
+      # Add your actual deployment step here
+      # This is where you'd deploy to your server/container
