--- a/movers_back/nixpacks.toml
+++ b/movers_back/nixpacks.toml
@@ -10,13 +10,16 @@ cmds = [
 cmds = [
     "cp .env.example .env",
     "php artisan key:generate --force",
+    "chmod -R 775 storage bootstrap/cache",
     "php artisan config:cache",
     "php artisan route:cache",
     "php artisan view:cache"
 ]
 
 [start]
-cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "php -S 0.0.0.0:$PORT -t public public/index.php"
 
 [variables]
 PORT = "8000"
+APP_ENV = "production"
+APP_DEBUG = "false"
