--- a/movers_back/nixpacks.toml
+++ b/movers_back/nixpacks.toml
@@ -17,9 +17,7 @@ cmds = [
 ]
 
 [start]
-cmd = "php -S 0.0.0.0:$PORT -t public public/index.php"
+cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
 
 [variables]
 PORT = "8000"
-APP_ENV = "production"
-APP_DEBUG = "false"
