--- a/mover/package.json
+++ b/mover/package.json
@@ -1,4 +1,12 @@
 {
+  "dependencies": {
+    "@vis.gl/react-google-maps": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/google.maps": "^3.54.0"
+  }
+}
+{
   "name": "404movers",
   "version": "0.1.0",
   "private": true,
