--- a/mover/.env.local
+++ b/mover/.env.local
@@ -1,7 +1,15 @@
-# Firebase VAPID Key (get this from Firebase Console)
-# Go to: Project Settings > Cloud Messaging > Web Push certificates
-NEXT_PUBLIC_FIREBASE_VAPID_KEY=your_vapid_key_here
+# mover/.env.local
+# Google Maps API key (leave blank or use a dummy in development)
+NEXT_PUBLIC_GOOGLE_MAP_API_KEY=your_maps_key_here
 
-# If you don't have a VAPID key yet, you can leave this empty
-# The app will work but FCM notifications won't work
-# NEXT_PUBLIC_FIREBASE_VAPID_KEY=
+# Stripe publishable key (leave blank in local development)
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_key_here
+
+# EmailJS configuration (optional)
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=your_emailjs_service_id_here
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=your_emailjs_template_id_here
+NEXT_PUBLIC_EMAILJS_USER_ID=your_emailjs_user_id_here
+
+# Firebase Cloud Messaging VAPID key
+# Obtain this from Firebase Console → Project Settings → Cloud Messaging → Web Push certificates.
+NEXT_PUBLIC_FIREBASE_VAPID_KEY=your_vapid_key_here
