--- a/movers_back/railway.toml
+++ b/movers_back/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm run build"  # or "yarn build" if you're using Yarn
+buildCommand = "npm run build"
 
 [deploy]
 healthcheckPath = "/health"
