--- a/mover/package.json
+++ b/mover/package.json
@@ -2,6 +2,7 @@
   "name": "404movers",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "npm@latest",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
