--- a/mover/railway.toml
+++ b/mover/railway.toml
@@ -3,12 +3,16 @@ builder = "railpack"
 
 [build.railpack]
 packageManager = "npm"
+installCommand = "npm ci"
+buildCommand = "npm run build"
 
 [deploy]
 healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 3
+startCommand = "npm start"
 
 [env]
 NODE_ENV = "production"
+NPM_CONFIG_UPDATE_NOTIFIER = "false"
