--- a/mover/package.json
+++ b/mover/package.json
@@ -1,12 +1,16 @@
 {
   "name": "404movers",
-  "version": "0.1.0",
+  "version": "0.1.0", 
   "private": true,
   "packageManager": "npm@latest",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build && next export",
+    "export": "next build && next export", 
     "start": "next start",
     "lint": "next lint"
   },
