--- a/mover/railway.toml
+++ b/mover/railway.toml
@@ -4,7 +4,7 @@ railpackVersion = "0.2.4"
 
 [build.railpack]
 packageManager = "npm"
-installCommand = "npm ci"
+installCommand = "npm install"
 buildCommand = "npm run build"
 
 [deploy]
@@ -19,4 +19,3 @@ NODE_ENV = "production"
 NPM_CONFIG_UPDATE_NOTIFIER = "false"
 NPM_CONFIG_FUND = "false"
 NPM_CONFIG_AUDIT = "false"
-YARN_ENABLE = "false"
