--- a/mover/package.json
+++ b/mover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "404movers",
-  "version": "0.1.0", 
+  "version": "0.1.0",
   "private": true,
   "engines": {
     "node": ">=18.0.0",
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build && next export", 
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -44,3 +44,18 @@
     "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
     "react-timer-hook": "^3.0.7",
+    "react-toastify": "^9.1.3",
+    "react-transition-group": "^4.4.5",
+    "sass": "^1.63.6",
+    "typescript": "5.1.5",
+    "use-places-autocomplete": "^4.0.1",
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/google-map-react": "^2.1.7",
+    "@types/google.maps": "^3.54.1",
+    "@types/react-geocode": "^0.2.1",
+    "@types/react-modal": "^3.16.0",
+    "@types/react-transition-group": "^4.4.6"
+  }
+}
