--- a/mover/package.json
+++ b/mover/package.json
@@ -27,10 +27,13 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "firebase": "^10.9.0",
+    "firebase-admin": "^12.0.0",
+    "formidable": "^3.5.1",
     "formik": "^2.4.2",
     "google-map-react": "^2.2.1",
     "google-maps-react-markers": "^2.0.8",
     "next": "13.4.7",
+    "nodemailer": "^6.9.8",
     "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
     "react-accessible-accordion": "^5.0.0",
@@ -47,13 +50,16 @@
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "sass": "^1.63.6",
+    "sharp": "^0.33.2",
     "typescript": "5.1.5",
     "use-places-autocomplete": "^4.0.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/google-map-react": "^2.1.7",
     "@types/google.maps": "^3.54.1",
+    "@types/nodemailer": "^6.4.14",
     "@types/react-geocode": "^0.2.1",
     "@types/react-modal": "^3.16.0",
     "@types/react-transition-group": "^4.4.6"
