--- a/mover/.env
+++ b/mover/.env
@@ -20,3 +20,4 @@ NODE_ENV=development
 NEXT_PUBLIC_APP_ENV=development
 NEXT_PUBLIC_APP_NAME=404MOVERS
 NEXT_PUBLIC_APP_VERSION=1.0.0
+NEXT_PUBLIC_APP_DOMAIN=em9485.404movers.ca
